--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body ng-app='myApp'>
-  <div id="body">
+  <div id="body" style="overflow: hidden;">
   <div ui-view="main"></div>
   <!-- UIkit JS -->
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.14/dist/js/uikit.min.js"></script>
